--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -19,10 +20,12 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.10.1",
     "next-superjson-plugin": "^0.5.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
