--- a/.env
+++ b/.env
@@ -15,3 +15,7 @@ GOOGLE_CLIENT_SECRET=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
 
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dz9v2zhwb
+
+NEXT_PUBLIC_PUSHER_APP_KEY=909f945d52ec4a887175
+PUSHER_APP_ID=1607324
+PUSHER_SECRET=acafbab1c4f48b882a96
